# interleaved-algorithms

./: CMakeLists.txt  README.md  binary_search.cpp  binary_search_bench.cpp  gen.cpp
binary_search/: group_prefetching.hpp  plain_interleaving.hpp  simd.hpp  single.hpp
cmake/: FindGBenchmark.cmake
utils/: benchmark.hpp  gendata.hpp
